--- a/ui/style.css
+++ b/ui/style.css
@@ -1,9 +1,3 @@
 p{
-	height: 300px;
-	width: 100px;
-	border: 2px solid black;
-	border-radius: 5px;
-	background-color: #308014;
-	/*Add your CSS here!*/
-	float:right;
+	color:#f5fffa;
 }
